WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193462
ServiceWorkerContainer is leaking due to a ref cycle
https://bugs.webkit.org/show_bug.cgi?id=193462
Summary
ServiceWorkerContainer is leaking due to a ref cycle
youenn fablet
Reported
2019-01-15 14:02:56 PST
ServiceWorkerContainer is leaking due to a ref cycle
Attachments
Patch
(1.80 KB, patch)
2019-01-15 14:05 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-01-15 14:03:13 PST
<
rdar://problem/47026303
>
youenn fablet
Comment 2
2019-01-15 14:05:53 PST
Created
attachment 359202
[details]
Patch
WebKit Commit Bot
Comment 3
2019-01-16 12:51:25 PST
Comment on
attachment 359202
[details]
Patch Clearing flags on attachment: 359202 Committed
r240049
: <
https://trac.webkit.org/changeset/240049
>
WebKit Commit Bot
Comment 4
2019-01-16 12:51:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug