Cherry-pick r240049. rdar://problem/47458184

ServiceWorkerContainer is leaking due to a ref cycle
    https://bugs.webkit.org/show_bug.cgi?id=193462
    <rdar://problem/47026303>

    Reviewed by Brady Eidson.

    ServiceWorkerContainer keeps a reference to its ready promise.
    The ready promise keeps a ref to its value which is a ServiceWorkerRegistration.
    ServiceWorkerRegistration keeps a ref to ServiceWorkerContainer.

    To break the reference cycle, set the ready promise to zero when ServiceWorkerContainer is stopped.

    Covered by imported/w3c/web-platform-tests/service-workers/service-worker/ready.https.html no longer leaking.

    * workers/service/ServiceWorkerContainer.cpp:
    (WebCore::ServiceWorkerContainer::stop):

    Canonical link: https://commits.webkit.org/208012@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240049 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.91@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@240380 268f45cc-cd09-0410-ab3c-d52691b4dbfc